QtQuick: Do not crash on broken states

States can be nullptr these days. Ideally we'd warn about this, but for
picking back to 6.5 it's enough to restore the pre-6.5.3 behavior and
not crash.

Amends commit f905876d6c3abda34dfd85cd40e300a31c1ebe52.

Pick-to: 6.6 6.5
Fixes: QTBUG-120301
Change-Id: I87021eb2dcbe7fc49f37c5d949d79466ae341a1c
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 7ce3ce41b8cc657d31ee28de73d2962a149cd776)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>